# bilibili-downloader

./: .gitignore  README.md  downloader.spec  go.mod  go.sum  main.go  main.py  requirements.txt
downloader/: App.py  BingImage.py  Cargo.toml  Cookie.py  SettingsDialog.py  SettingsWindow.py  StartWindow.py  Tray.py  __init__.py  actions.py  bing_image.py  download.py  download_proc.py
downloader/Color/: __init__.py
downloader/CommonWidgets/: Dialog.py  Input.py  Menu.py  PushButton.py  ToolButton.py  __init__.py
downloader/Dialog/: Dialog.py  __init__.py
downloader/Enums/: Color.py  Req.py  SettingsKey.py  __init__.py
downloader/MainWidget/: LeftNav.py  MainWidget.py  Panel.py  RightPanel.py  __init__.py
downloader/MainWindow/: AboutDialog.py  MainMenu.py  MainWindow.py  Menu.py  NewDialog.py  SelectDialog.py  SettingsDialog.py  Toolbar.py
downloader/QRC/: Icons.py  Styles.py
downloader/Settings/: Settings.py  SettingsDialog.py
downloader/SettingsDialog/: Settings.py  SettingsDialog.py
downloader/cli/: cli.py
downloader/common_widgets/: CheckableItem.py  ClickableWidget.py  Dialog.py  Input.py  Loading.py  MessageBox.py  PushButton.py  Scrollbar.py  ToolButton.py  __init__.py
downloader/cookie/: Cookie.py  __init__.py
downloader/db/: BaseModel.py  DB.py  Db.py  EpisodeTable.py  PartTable.py  SeasonTable.py  VideoTable.py  __init__.py
downloader/download/: Download.py  download_fille.py  get_info.py  history.py
downloader/enums/: BaseEnum.py  EventName.py  Req.py  SettingsKey.py  Status.py  __init__.py
downloader/mainFrame/: MainFrame.py
(+100 files in other folders)
