[package]
name = "downloader"
version = "2.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.38", features = ["alloc", "clock", "now"] }
clap = "4.5.7"
crossterm = "0.27.0"
ratatui = "0.26.3"
reqwest = { version = "0.12.4", features = ["cookies"] }
rusqlite = { version = "0.31.0", features = ["bundled"] }
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["full"] }
