[package]
name = "downloader"
version = "2.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.8.0"
actix-web-actors = "4.3.0"
clap = "4.5.7"
home = "0.5.9"
md-5 = "0.10.6"
reqwest = {version = "0.12.4", features = ["cookies"]}
rusqlite = "0.31.0"
serde_json = "1.0.117"
tokio = { version = "1.38.0", features = ["full"] }
